--- a/SPX-GC/christmas/customize.css
+++ b/SPX-GC/christmas/customize.css
@@ -52,6 +52,8 @@
   --grey: #999;
   /* background: var(--black); */
   color: var(--white);
+
+  --light-wire-width: 100px;
 }
 
 
@@ -70,13 +72,14 @@ body {
   justify-content: space-between;
   padding: 0px;
   width: 700px;
-  margin: 0 auto;
+  margin: 0px auto;
 }
 
 .light-bulb {
   border-radius: 50%;
-  height: 30px;
-  width: 30px;
+  height: 15px;
+  width: 15px;
+  margin-top: 10px;
 }
 
 .light-bulb.theme-color-one {
@@ -104,27 +107,29 @@ body {
   position: relative;
 }
 
+/* Light Bulb Stems */
 .light-bulb::before {
   content: '';
   position: absolute;
   border: 2px solid #222;
-  width: 10px;
+  width: 5px;
   height: 10px;
   background: #222;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  left: 25%;
+  left: 20%;
   top: -12px;
 }
 
+/* Light Bulb Wires */
 .light-bulb::after {
   content: '';
   top: -20px;
   left: 60%;
   position: absolute;
-  width: 90px;
+  width: var(--light-wire-width);
   height: 28px;
-  border-bottom: 4px solid #222;
+  border-bottom: 2px solid #222;
   border-radius: 50%;
   z-index: -1;
 }
@@ -135,16 +140,16 @@ body {
 
 @keyframes light-up-theme-color-one {
   0% {
-    box-shadow: 0 1px 10px 5px var(--theme-color-one);
+    box-shadow: 0 1px 6px 5px var(--theme-color-one);
   }
   25% {
-    box-shadow: 0 1px 15px 5px var(--theme-color-one);
+    box-shadow: 0 1px 9px 5px var(--theme-color-one);
   }
   50% {
-    box-shadow: 0 1px 20px 5px var(--theme-color-one);
+    box-shadow: 0 1px 12px 5px var(--theme-color-one);
   }
   75% {
-    box-shadow: 0 1px 25px 5px var(--theme-color-one);
+    box-shadow: 0 1px 15px 5px var(--theme-color-one);
   }
   100% {
     box-shadow: none;
@@ -153,56 +158,56 @@ body {
 
 @keyframes light-up-theme-color-two {
   0% {
-    box-shadow: 0 1px 15px 5px var(--theme-color-two);
+    box-shadow: 0 1px 9px 5px var(--theme-color-two);
   }
   25% {
-    box-shadow: 0 1px 20px 5px var(--theme-color-two);
+    box-shadow: 0 1px 12px 5px var(--theme-color-two);
   }
   50% {
-    box-shadow: 0 1px 25px 5px var(--theme-color-two);
+    box-shadow: 0 1px 15px 5px var(--theme-color-two);
   }
   75% {
     box-shadow: none;
   }
   100% {
-    box-shadow: 0 1px 10px 5px var(--theme-color-two);
+    box-shadow: 0 1px 6px 5px var(--theme-color-two);
   }
 
 }
 
 @keyframes light-up-theme-color-three {
   0% {
-    box-shadow: 0 1px 20px 5px var(--theme-color-three);
+    box-shadow: 0 1px 12px 5px var(--theme-color-three);
   }
   25% {
-    box-shadow: 0 1px 25px 5px var(--theme-color-three);
+    box-shadow: 0 1px 15px 5px var(--theme-color-three);
   }
   50% {
     box-shadow: none;
   }
   75% {
-    box-shadow: 0 1px 10px 5px var(--theme-color-three);
+    box-shadow: 0 1px 6px 5px var(--theme-color-three);
   }
   100% {
-    box-shadow: 0 1px 15px 5px var(--theme-color-three);
+    box-shadow: 0 1px 9px 5px var(--theme-color-three);
   }
 }
 
 @keyframes light-up-theme-color-four {
   0% {
-    box-shadow: 0 1px 25px 5px var(--theme-color-four);
+    box-shadow: 0 1px 15px 5px var(--theme-color-four);
   }
   25% {
     box-shadow: none;
   }
   50% {
-    box-shadow: 0 1px 10px 5px var(--theme-color-four);
+    box-shadow: 0 1px 6px 5px var(--theme-color-four);
   }
   75% {
-    box-shadow: 0 1px 15px 5px var(--theme-color-four);
+    box-shadow: 0 1px 9px 5px var(--theme-color-four);
   }
   100% {
-    box-shadow: 0 1px 20px 5px var(--theme-color-four);
+    box-shadow: 0 1px 12px 5px var(--theme-color-four);
   }
 }
 
@@ -211,22 +216,22 @@ body {
     box-shadow: none;
   }
   25% {
-    box-shadow: 0 1px 10px 5px var(--theme-color-five);
+    box-shadow: 0 1px 6px 5px var(--theme-color-five);
   }
   50% {
-    box-shadow: 0 1px 15px 5px var(--theme-color-five);
+    box-shadow: 0 1px 9px 5px var(--theme-color-five);
   }
   75% {
-    box-shadow: 0 1px 20px 5px var(--theme-color-five);
+    box-shadow: 0 1px 12px 5px var(--theme-color-five);
   }
   100% {
-    box-shadow: 0 1px 25px 5px var(--theme-color-five);
+    box-shadow: 0 1px 15px 5px var(--theme-color-five);
   }
 }
 
 .light-bulb {
   /* prior styles go here */
-  animation-duration: 1.1s;
+  animation-duration: 3s;
   animation-iteration-count: infinite;
 }
 
